Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/PKI_Queue_Member__c.object-meta.xml
<CustomObject>
    <description>This is a clone of the Native Group Member Object so the business can add/deactivate queue members and L.FLOW_4000 will run</description>
    <label>PKI Queue Member</label>
    <nameField>
        <displayFormat>QM-{000000}</displayFormat>
        <label>PKI Queue Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PKI Queue Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>