Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/fields/fxNativeGroupMemberId__c.field-meta.xml
<CustomField>
    <fullName>fxNativeGroupMemberId__c</fullName>
    <description>this is text field set from a M.ACTION 8220 on Sync. Used for deleting records and sycning</description>
    <inlineHelpText>this is text field set from a M.ACTION 8220 on Sync. Used for deleting records and sycning</inlineHelpText>
    <label>fxNativeGroupMemberId</label>
    <type>TextArea</type>
</CustomField>