Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/fields/fxNativeQueueId__c.field-meta.xml
<CustomField>
    <fullName>fxNativeQueueId__c</fullName>
    <description>formula to get the native QUEUE id on the member record...used in L.FLOW to delete nightly</description>
    <formula>BLANKVALUE(PKI_Queue_Name__r.NativeQueueID__c, &quot;&quot;)</formula>
    <label>fxNativeQueueId</label>
    <type>Text</type>
</CustomField>