Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/fields/fxOBCuser__c.field-meta.xml
<CustomField>
    <fullName>fxOBCuser__c</fullName>
    <description>This will display the Users OwnedByCompany value. Compare it to PKI Queue OwnedByCompany to see if users are out of place.</description>
    <formula>TEXT(User__r.Owned_by_Company__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will display the Users OwnedByCompany value. Compare it to PKI Queue OwnedByCompany to see if users are out of place.</inlineHelpText>
    <label>fxOBCuser</label>
    <type>Text</type>
</CustomField>