Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/fields/fxUser8Char__c.field-meta.xml
<CustomField>
    <fullName>fxUser8Char__c</fullName>
    <formula>SUBSTITUTE( SUBSTITUTE( User__r.fxUser8Char__c, &#39;0000&#39;,&#39;&#39;),&#39;000&#39;,&#39;&#39;)</formula>
    <label>fxUser8Char</label>
    <type>Text</type>
</CustomField>