Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/fields/fxUserIsActive__c.field-meta.xml
<CustomField>
    <fullName>fxUserIsActive__c</fullName>
    <description>formula to get user Active status - ATEAM-1931</description>
    <formula>User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>formula to get user Active status</inlineHelpText>
    <label>fxUserIsActive</label>
    <type>Checkbox</type>
</CustomField>