Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/fields/fxUsers__c.field-meta.xml
<CustomField>
    <fullName>fxUsers__c</fullName>
    <description>This will show a counter of users in the Subgroup</description>
    <formula>IF( NOT(ISBLANK(Member_Group__c))  ,Member_Group__r.MembersCount__c ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will show a counter of users in the Subgroup</inlineHelpText>
    <label>fxUsers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>