Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/fields/isMyUser__c.field-meta.xml
<CustomField>
    <fullName>isMyUser__c</fullName>
    <description>This is a formula field to determine is the user listed is the running user so you can see &quot;My Queues&quot; in a view</description>
    <formula>User__r.Id  =  $User.Id</formula>
    <inlineHelpText>This is a formula field to determine is the user listed is the running user so you can see &quot;My Queues&quot; in a view</inlineHelpText>
    <label>isMyUser</label>
    <type>Checkbox</type>
</CustomField>