Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/fields/Member_Group__c.field-meta.xml
<CustomField>
    <fullName>Member_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a sub group of a group.</description>
    <inlineHelpText>This is a sub group of a group.</inlineHelpText>
    <label>Member Group</label>
    <referenceTo>PKI_Queue__c</referenceTo>
    <relationshipLabel>Member Group</relationshipLabel>
    <relationshipName>Member_Group</relationshipName>
    <type>Lookup</type>
</CustomField>