Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/fields/RemoveMember__c.field-meta.xml
<CustomField>
    <fullName>RemoveMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this member should be removed from this queue, and mirrored to the native group member</description>
    <inlineHelpText>Check the box to mark the user to be removed from this queue. (A process will run automated soon after and remove this person)</inlineHelpText>
    <label>Remove Member</label>
    <type>Checkbox</type>
</CustomField>