Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to SFDC User</description>
    <inlineHelpText>Select an Active User</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>PKI Queue Member</relationshipLabel>
    <relationshipName>PKI_Queue_Member</relationshipName>
    <type>Lookup</type>
</CustomField>