Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/validationRules/Check_Native_Queue_Exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Native_Queue_Exist</fullName>
    <active>true</active>
    <description>V.RULE_PKI_QUEUE_MEMBER_001: Please allow up to 2 minutes for the new queue to finish being created before adding a member</description>
    <errorConditionFormula>AND(PKI_Queue_Name__c &lt;&gt; null, OR(PKI_Queue_Name__r.NativeQueueID__c == null ,PKI_Queue_Name__r.NativeQueueID__c ==&#39;Not Available&#39;))</errorConditionFormula>
    <errorMessage>V.RULE_PKI_QUEUE_MEMBER_001: Please allow up to 2 minutes for the new queue to finish being created before adding a member</errorMessage>
</ValidationRule>