Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/listViews/X100_Members_QUICK_FILTER.listView-meta.xml
<ListView>
    <fullName>X100_Members_QUICK_FILTER</fullName>
    <columns>NAME</columns>
    <columns>PKI_Queue_Name__c</columns>
    <columns>fxType__c</columns>
    <columns>User__c</columns>
    <columns>RemoveMember__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>Soledad Riquelme</value>
    </filters>
    <label>100.  Members - (*QUICK FILTER*)</label>
</ListView>