Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/listViews/X110_Members_Search_Member.listView-meta.xml
<ListView>
    <fullName>X110_Members_Search_Member</fullName>
    <columns>NAME</columns>
    <columns>PKI_Queue_Name__c</columns>
    <columns>fxType__c</columns>
    <columns>User__c</columns>
    <columns>RemoveMember__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>joanna chochol,lidia peiu</value>
    </filters>
    <label>110.  Members - (Search Member)</label>
</ListView>