Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/listViews/X120_Members_Search_by_Queue.listView-meta.xml
<ListView>
    <fullName>X120_Members_Search_by_Queue</fullName>
    <columns>NAME</columns>
    <columns>PKI_Queue_Name__c</columns>
    <columns>fxType__c</columns>
    <columns>User__c</columns>
    <columns>RemoveMember__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fxType__c</field>
        <operation>equals</operation>
        <value>Queue</value>
    </filters>
    <filters>
        <field>PKI_Queue_Name__c</field>
        <operation>contains</operation>
        <value>AMER</value>
    </filters>
    <label>120.  Members - (Search by Queue)</label>
</ListView>