Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/listViews/X200_Members_All.listView-meta.xml
<ListView>
    <fullName>X200_Members_All</fullName>
    <columns>NAME</columns>
    <columns>PKI_Queue_Name__c</columns>
    <columns>fxType__c</columns>
    <columns>User__c</columns>
    <columns>RemoveMember__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>Jillian</value>
    </filters>
    <label>200. Members - All</label>
</ListView>