Perkin-UAT/force-app/main/default/objects/PKI_Queue_Member__c/listViews/X400_My_Groups.listView-meta.xml
<ListView>
    <fullName>X400_My_Groups</fullName>
    <columns>NAME</columns>
    <columns>PKI_Queue_Name__c</columns>
    <columns>fxType__c</columns>
    <columns>User__c</columns>
    <columns>RemoveMember__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isMyUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>fxType__c</field>
        <operation>equals</operation>
        <value>Regular</value>
    </filters>
    <label>400. My Groups</label>
</ListView>